rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x882_1994-TC1_Remote-Operations-Realizations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x882_1994-TC1_Remote-Operations-Realizations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod remote_operations_realizations {
    extern crate alloc;
    use super::remote_operations_information_objects_extensions::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum RealizationParameterRealizationType {
        #[rasn(identifier = "association-service")]
        association_service = 0,
        #[rasn(identifier = "transfer-service")]
        transfer_service = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct RealizationParameter {
        #[rasn(identifier = "realization-type")]
        pub realization_type: RealizationParameterRealizationType,
        #[rasn(default = "realization_parameter_concatenation_default")]
        pub concatenation: bool,
    }
    impl RealizationParameter {
        pub fn new(
            realization_type: RealizationParameterRealizationType,
            concatenation: bool,
        ) -> Self {
            Self {
                realization_type,
                concatenation,
            }
        }
    }
    fn realization_parameter_concatenation_default() -> bool {
        false
    }
}
