rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_AlgorithmInformation-2009.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_AlgorithmInformation-2009.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod algorithm_information_2009 {
    extern crate alloc;
    use super::pkix1_implicit_2009::KeyUsage;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "  Suggested prefixes for algorithm objects are:"]
    #[doc = ""]
    #[doc = "  mda-   Message Digest Algorithms"]
    #[doc = "  sa-    Signature Algorithms"]
    #[doc = "  kta-   Key Transport Algorithms (Asymmetric)"]
    #[doc = "  kaa-   Key Agreement Algorithms  (Asymmetric)"]
    #[doc = "  kwa-   Key Wrap Algorithms (Symmetric)"]
    #[doc = "  kda-   Key Derivation Algorithms"]
    #[doc = "  maca-  Message Authentication Code Algorithms"]
    #[doc = "  pk-    Public Key"]
    #[doc = "  cea-   Content (symmetric) Encryption Algorithms"]
    #[doc = "  cap-   S/MIME Capabilities"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    #[non_exhaustive]
    pub enum ParamOptions {
        required = 0,
        preferredPresent = 1,
        preferredAbsent = 2,
        absent = 3,
        inheritable = 4,
        optional = 5,
    }
}
