rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_CMSSigncryption.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_CMSSigncryption.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 38, column 2]
    │
    │ 
 38 │  Certificates	::= [XER:BASE64] OCTET STRING ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
