rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_CryptographicMessageSyntaxAlgorithms-2009.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_CryptographicMessageSyntaxAlgorithms-2009.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 47, column 2]
    │
    │ 
 46 │  --  S/MIME Capabilities for these items
 47 │  SMimeCaps SMIME-CAPS ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
