rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_PKIX-CommonTypes-2009.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_PKIX-CommonTypes-2009.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 94, column 28]
    │
    │ 
 91 │  EXTENSION ::= CLASS {
 92 │  &id			OBJECT IDENTIFIER UNIQUE,
 93 │  &ExtnType,
 94 │  &Critical	BOOLEAN DEFAULT {TRUE | FALSE } ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 95 │  } WITH SYNTAX {
    │
────╯
