rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_PKIX-X400Address-2009.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_PKIX-X400Address-2009.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod pkix_x400_address_2009 {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, tag(explicit(application, 2)))]
    pub enum AdministrationDomainName {
        #[rasn(size("0..=16"))]
        numeric(NumericString),
        #[rasn(size("0..=16"))]
        printable(PrintableString),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct BuiltInDomainDefinedAttribute {
        #[rasn(size("1..=8"), identifier = "type")]
        pub r_type: PrintableString,
        #[rasn(size("1..=128"))]
        pub value: PrintableString,
    }
    impl BuiltInDomainDefinedAttribute {
        pub fn new(r_type: PrintableString, value: PrintableString) -> Self {
            Self { r_type, value }
        }
    }
    #[doc = " Built-in Domain-defined Attributes"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=4"))]
    pub struct BuiltInDomainDefinedAttributes(pub SequenceOf<BuiltInDomainDefinedAttribute>);
    #[doc = " Built-in Standard Attributes"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct BuiltInStandardAttributes {
        #[rasn(identifier = "country-name")]
        pub country_name: Option<CountryName>,
        #[rasn(identifier = "administration-domain-name")]
        pub administration_domain_name: Option<AdministrationDomainName>,
        #[rasn(tag(context, 0), identifier = "network-address")]
        pub network_address: Option<NetworkAddress>,
        #[rasn(tag(context, 1), identifier = "terminal-identifier")]
        pub terminal_identifier: Option<TerminalIdentifier>,
        #[rasn(tag(explicit(context, 2)), identifier = "private-domain-name")]
        pub private_domain_name: Option<PrivateDomainName>,
        #[rasn(tag(context, 3), identifier = "organization-name")]
        pub organization_name: Option<OrganizationName>,
        #[rasn(tag(context, 4), identifier = "numeric-user-identifier")]
        pub numeric_user_identifier: Option<NumericUserIdentifier>,
        #[rasn(tag(context, 5), identifier = "personal-name")]
        pub personal_name: Option<PersonalName>,
        #[rasn(tag(context, 6), identifier = "organizational-unit-names")]
        pub organizational_unit_names: Option<OrganizationalUnitNames>,
    }
    impl BuiltInStandardAttributes {
        pub fn new(
            country_name: Option<CountryName>,
            administration_domain_name: Option<AdministrationDomainName>,
            network_address: Option<NetworkAddress>,
            terminal_identifier: Option<TerminalIdentifier>,
            private_domain_name: Option<PrivateDomainName>,
            organization_name: Option<OrganizationName>,
            numeric_user_identifier: Option<NumericUserIdentifier>,
            personal_name: Option<PersonalName>,
            organizational_unit_names: Option<OrganizationalUnitNames>,
        ) -> Self {
            Self {
                country_name,
                administration_domain_name,
                network_address,
                terminal_identifier,
                private_domain_name,
                organization_name,
                numeric_user_identifier,
                personal_name,
                organizational_unit_names,
            }
        }
    }
    #[doc = " see also teletex-organizational-unit-names"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, tag(explicit(application, 1)))]
    pub enum CountryName {
        #[rasn(size("3"), identifier = "x121-dcc-code")]
        x121_dcc_code(NumericString),
        #[rasn(size("2"), identifier = "iso-3166-alpha2-code")]
        iso_3166_alpha2_code(PrintableString),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct ExtensionAttribute {
        #[rasn(
            value("0..=256"),
            tag(context, 0),
            identifier = "extension-attribute-type"
        )]
        pub extension_attribute_type: u16,
        #[rasn(tag(explicit(context, 1)), identifier = "extension-attribute-value")]
        pub extension_attribute_value: Any,
    }
    impl ExtensionAttribute {
        pub fn new(extension_attribute_type: u16, extension_attribute_value: Any) -> Self {
            Self {
                extension_attribute_type,
                extension_attribute_value,
            }
        }
    }
    #[doc = " Extension Attributes"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=256"))]
    pub struct ExtensionAttributes(pub SetOf<ExtensionAttribute>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct NetworkAddress(pub X121Address);
    #[doc = " see also teletex-organization-name"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=32"))]
    pub struct NumericUserIdentifier(pub NumericString);
    #[doc = " X.400 address syntax starts here"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct ORAddress {
        #[rasn(identifier = "built-in-standard-attributes")]
        pub built_in_standard_attributes: BuiltInStandardAttributes,
        #[rasn(identifier = "built-in-domain-defined-attributes")]
        pub built_in_domain_defined_attributes: Option<BuiltInDomainDefinedAttributes>,
        #[rasn(identifier = "extension-attributes")]
        pub extension_attributes: Option<ExtensionAttributes>,
    }
    impl ORAddress {
        pub fn new(
            built_in_standard_attributes: BuiltInStandardAttributes,
            built_in_domain_defined_attributes: Option<BuiltInDomainDefinedAttributes>,
            extension_attributes: Option<ExtensionAttributes>,
        ) -> Self {
            Self {
                built_in_standard_attributes,
                built_in_domain_defined_attributes,
                extension_attributes,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=64"))]
    pub struct OrganizationName(pub PrintableString);
    #[doc = " see also teletex-organizational-unit-names"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=32"))]
    pub struct OrganizationalUnitName(pub PrintableString);
    #[doc = " see also teletex-personal-name"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=4"))]
    pub struct OrganizationalUnitNames(pub SequenceOf<OrganizationalUnitName>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set)]
    pub struct PDSParameter {
        #[rasn(size("1..=30"), identifier = "printable-string")]
        pub printable_string: Option<PrintableString>,
        #[rasn(identifier = "teletex-string")]
        pub teletex_string: Option<TeletexString>,
    }
    impl PDSParameter {
        pub fn new(
            printable_string: Option<PrintableString>,
            teletex_string: Option<TeletexString>,
        ) -> Self {
            Self {
                printable_string,
                teletex_string,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set)]
    pub struct PersonalName {
        #[rasn(size("1..=40"), tag(context, 0))]
        pub surname: PrintableString,
        #[rasn(size("1..=16"), tag(context, 1), identifier = "given-name")]
        pub given_name: Option<PrintableString>,
        #[rasn(size("1..=5"), tag(context, 2))]
        pub initials: Option<PrintableString>,
        #[rasn(size("1..=3"), tag(context, 3), identifier = "generation-qualifier")]
        pub generation_qualifier: Option<PrintableString>,
    }
    impl PersonalName {
        pub fn new(
            surname: PrintableString,
            given_name: Option<PrintableString>,
            initials: Option<PrintableString>,
            generation_qualifier: Option<PrintableString>,
        ) -> Self {
            Self {
                surname,
                given_name,
                initials,
                generation_qualifier,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct PresentationAddress {
        #[rasn(tag(explicit(context, 0)), identifier = "pSelector")]
        pub p_selector: Option<OctetString>,
        #[rasn(tag(explicit(context, 1)), identifier = "sSelector")]
        pub s_selector: Option<OctetString>,
        #[rasn(tag(explicit(context, 2)), identifier = "tSelector")]
        pub t_selector: Option<OctetString>,
        #[rasn(size("1.."), tag(explicit(context, 3)), identifier = "nAddresses")]
        pub n_addresses: SetOf<OctetString>,
    }
    impl PresentationAddress {
        pub fn new(
            p_selector: Option<OctetString>,
            s_selector: Option<OctetString>,
            t_selector: Option<OctetString>,
            n_addresses: SetOf<OctetString>,
        ) -> Self {
            Self {
                p_selector,
                s_selector,
                t_selector,
                n_addresses,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum PrivateDomainName {
        #[rasn(size("1..=16"))]
        numeric(NumericString),
        #[rasn(size("1..=16"))]
        printable(PrintableString),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct TeletexDomainDefinedAttribute {
        #[rasn(identifier = "type")]
        pub r_type: TeletexString,
        pub value: TeletexString,
    }
    impl TeletexDomainDefinedAttribute {
        pub fn new(r_type: TeletexString, value: TeletexString) -> Self {
            Self { r_type, value }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=32"))]
    pub struct TeletexOrganizationalUnitName(pub TeletexString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=24"))]
    pub struct TerminalIdentifier(pub PrintableString);
    #[doc = " see also extended-network-address"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=16"))]
    pub struct X121Address(pub NumericString);
    pub static UB_COMMON_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_COUNTRY_NAME_ALPHA_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(2));
    pub static UB_COUNTRY_NAME_NUMERIC_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(3));
    pub static UB_DOMAIN_DEFINED_ATTRIBUTE_TYPE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(8));
    pub static UB_DOMAIN_DEFINED_ATTRIBUTE_VALUE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128));
    pub static UB_DOMAIN_DEFINED_ATTRIBUTES: LazyLock<Integer> = LazyLock::new(|| Integer::from(4));
    pub static UB_DOMAIN_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_E163_4_NUMBER_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(15));
    pub static UB_E163_4_SUB_ADDRESS_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(40));
    pub static UB_EXTENSION_ATTRIBUTES: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_GENERATION_QUALIFIER_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(3));
    pub static UB_GIVEN_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_INITIALS_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(5));
    pub static UB_INTEGER_OPTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    #[doc = "  specifications of Upper Bounds MUST be regarded as mandatory"]
    #[doc = "  from Annex B of ITU-T X.411 Reference Definition of MTS Parameter"]
    #[doc = "  Upper Bounds"]
    pub static UB_MATCH: LazyLock<Integer> = LazyLock::new(|| Integer::from(128));
    pub static UB_NUMERIC_USER_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(32));
    pub static UB_ORGANIZATION_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_ORGANIZATIONAL_UNIT_NAME_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32));
    pub static UB_ORGANIZATIONAL_UNITS: LazyLock<Integer> = LazyLock::new(|| Integer::from(4));
    pub static UB_PDS_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_PDS_PARAMETER_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(30));
    pub static UB_PDS_PHYSICAL_ADDRESS_LINES: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(6));
    pub static UB_POSTAL_CODE_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_SURNAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(40));
    pub static UB_TERMINAL_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(24));
    pub static UB_UNFORMATTED_ADDRESS_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(180));
    pub static UB_X121_ADDRESS_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
}
