rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_PKIX1Explicit-2009.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_PKIX1Explicit-2009.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 183, column 2]
     │
     │ 
 183 │  TBSCertificate  ::=  SEQUENCE  { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
     │
─────╯
