rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x894_2018-cor1_PKIXAlgs-2009.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x894_2018-cor1_PKIXAlgs-2009.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 53, column 2]
    │
    │ 
 45 │  --
 46 │  -- S/MIME CAPS for algorithms in this document
 47 │  --
 48 │  -- For all of the algorithms laid out in this document, the
 49 │  -- parameters field for the S/MIME capabilities is defined as
 50 │  -- ABSENT as there are no specific values that need to be known
 51 │  -- by the receiver for negotiation.
 52 │  --
 53 │  SMimeCaps SMIME-CAPS ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
